Fix:fix css in Community.css and Search.css to make the content not overlap with MainNav #99

--- a/front-end/src/community/Community.css
+++ b/front-end/src/community/Community.css
@@ -1,5 +1,5 @@
 div.Community{
-    margin-top: 35px;
+
     margin-bottom: 35px;
 }
 
