--- a/front-end/src/search/Search.css
+++ b/front-end/src/search/Search.css
@@ -1,4 +1,3 @@
 div.Search {
-    margin-top: 35px;
     margin-bottom: 50px;
 }
